# danish

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  wheels.yml  wheeltest.yml
danish/: __init__.py  _version.py  factory.py  fitter.py
danish/data/: AuxTelObsc.yaml  ComCamObsc.yaml  RubinObsc.yaml
devel/: auxtel_obscurations.py  generate_mask_model.py  rubin_obscurations.py  time_coords.py  time_fitter.py  time_image.py
notebooks/: AuxTel Test.ipynb  Caustic Check.ipynb  Danish vs Simulation AuxTel.ipynb  Danish vs Simulation.ipynb  Donut Viewer.ipynb  Spider Shadows.ipynb  Spiders.ipynb  Vignetting Model.ipynb  Visualize AuxTel.ipynb  Visualize.ipynb
src/: danish.cpp
tests/: .coveragerc  conftest.py  danish_test_helpers.py  test_factory.py  test_fitter.py  test_helpers.py
tests/data/: AuxTelTestDonuts.pkl  test_atm_donuts.pkl  test_kolm_donuts.pkl
ups/: danish.table
