[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm",
    "wheel",
    "pybind11>=2.10",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "danish"
dynamic = ["version"]
authors = [{ name = "Josh Meyers", email = "jmeyers314@gmail.com" }]
description = "Geometric donut engine"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
    "pybind11>2.10",
    "numpy",
    "pyyaml",
    "galsim",
    "batoid",
    "scipy",
]
urls = { Homepage = "https://github.com/jmeyers314/danish" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
danish = ["data/**/*"]

[tool.setuptools_scm]
write_to = "danish/_version.py"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"  # Or "text/markdown" if you convert the README
